end of year update

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8">
-	<title>Rassilon, Omega, and that Other Guy</title>
-	<meta name="author" content="William B. Swift">
+	<title>Rassilon, Omega, and that Other Guy</title><meta name="author" content="William B. Swift">
 	<meta name="description" content="Main homepage, index, and table of contents"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="css/normalize.css" type="text/css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Russo+One|Sarpanch" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Russo+One%7CSarpanch" rel="stylesheet">
 	<link href="css/styles.css" type="text/css" rel="stylesheet">
-	<link rel="shortcut icon" type="image/png" href="images/rassilonicon2.png" />
+	<link rel="shortcut icon" type="image/png" href="images/rassilonicon2.png">
 	<style>
 	</style>
 </head>
@@ -22,6 +20,9 @@
 			document.body.className += ' ' + 'mobile';
 		}
 	</script>
+	<div class="noshow">
+		<a href="index.html">Return To Master Index</a>
+	</div>
 	<div class="header">
 		<div id="logo">
 			<a href="index.html">
@@ -29,9 +30,10 @@
 			</a>
 		</div>
 		<div class="nav">
+
 			<ul>
 				<li class="delete">
-					<a href="index.html">Home</a>
+					<a href="index.html">Master Index</a>
 				</li>
 				<div class="dropdown">
 					<li class="dropbtn">Gallifreyan Data</li>
@@ -124,7 +126,7 @@
 						</li>
 						<br>
 						<li>
-							<a href="rooconstruction.html">Dalek Biology & Culture</a>
+							<a href="rooconstruction.html">Dalek Biology &amp; Culture</a>
 						</li>
 						<br>
 						<li>
@@ -134,9 +136,6 @@
 				</div>
 				<li>
 					<a href="index.html#key">Sources</a>
-				</li>
-				<li>
-					<a href="#footer">Contact</a>
 				</li>
 				<div class="innerlink">
 					<div class="dropdown">
@@ -165,6 +164,9 @@
 						</ul>
 					</div>
 				</div>
+				<li>
+					<a href="#footer">Contact</a>
+				</li>
 				<li>
 					<h3>click on paragraphs to see color coding for sources</h3>
 				</li>
@@ -201,15 +203,26 @@
 			<div class="section">
 				<span class="A-fanon">Greetings. I am known in these parts as Marnal Gate and this is the world's largest website on the Time Lords of Gallifrey
 					(at least on this planet). This page was originally created in March of 1998 AD.
-					<span style="font-weight: bold;">It was last updated in November of 2018 AD. </span>
+					<span style="font-weight: bold;">It was last updated in December of 2018 AD. </span>
 				</span>
 			</div>
 			<div class="section">
-				<span class="A-fanon">I have (shall we say 'an obsessive'? Yes. Yes, we shall) an obsessive interest in the history of the history of the Doctor's people from before the time of Rassilon to its resurrection after the Time War with the Daleks. The idea behind this web page is to trace and collect all the little details about Time Lord biology, culture, and history that we have been given over the last half-century. I've also added a section on the Daleks (though it doesn't cover as much material as I'd like). </span>
+				<span class="A-fanon">I
+have (shall we say 'an obsessive'? Yes. Yes, we shall) an obsessive
+interest in the history of the history of the Doctor's people from
+before the time of Rassilon to its resurrection after the Time War with
+the Daleks. The idea behind this web page is to trace and collect all
+the little details about Time Lord biology, culture, and history that
+we have been given over the last half-century. I've also added a
+section on the Daleks (though it doesn't cover as much material as I'd
+like). </span>
 			</div>
 			<div class="section">
-				<span class="A-fanon">If you have any doubts as to the validity of the data presented, just use your mouse to click on the text. This will reveal the color coding for sources for the entire paragraph. The Quick Color Key button in the top menu will show you the source of each color. Alternately click on the
-					<a href="#key">Sources</a> 
+				<span class="A-fanon">If
+you have any doubts as to the validity of the data presented, just use
+your mouse to click on the text. This will reveal the color coding for
+sources for the entire paragraph. The Quick Color Key button in the top
+menu will show you the source of each color. Alternately click on the <a href="#key">Sources</a> 
 				button for a somewhat more detailed description. </span>
 			</div>
 		</div>
@@ -255,7 +268,7 @@
 			</div>
 			<div class="table cf">
 				<figure id="biology">
-					<img src="images/2Hearts.jpeg" height="400" title="Gallifreyan X-ray" alt="Gallifreyan X-ray">
+					<img src="images/2Hearts.jpeg" title="Gallifreyan X-ray" alt="Gallifreyan X-ray" height="400">
 				</figure>
 				<ul>
 					<li>
@@ -348,7 +361,7 @@
 						<a href="roolifedeath.html#language">Languages</a>
 					</li>
 					<li>
-						<a href="roolifedeath.html#sayings">Sayings & Teachings</a>
+						<a href="roolifedeath.html#sayings">Sayings &amp; Teachings</a>
 					</li>
 				</ul>
 			</div>
@@ -782,7 +795,7 @@
 				</figure>
 				<ul>
 					<li>
-						<a href="rootimeline8.html#beginning">The Ninth Doctor & the War Aftermath</a>
+						<a href="rootimeline8.html#beginning">The Ninth Doctor &amp; the War Aftermath</a>
 					</li>
 					<li>
 						<a href="rootimeline8.html#doc10">The Tenth Doctor</a>
@@ -791,7 +804,7 @@
 						<a href="rootimeline8.html#master">The Master</a>
 					</li>
 					<li>
-						<a href="rootimeline8.html#doc11">The End of Time & the Eleventh Doctor</a>
+						<a href="rootimeline8.html#doc11">The End of Time &amp; the Eleventh Doctor</a>
 					</li>
 					<li>
 						<a href="rootimeline8.html#daydoc">The Day of the Doctor</a>
@@ -892,12 +905,24 @@
 			</figure>
 			<p>
 				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
-				<h2>SOURCES AND COLOR KEY</h2>
-				<span class="A-fanon">I've tried to base all my information off of reliable sources. These include the TV series (new and old), Novels, Audios, and numerous reference books and websites. Obviously I have a great deal of respect and love for the expanded universe of Doctor Who beyond just the TV episodes, but I've made sure to color code the text so that those with a narrower view of head-canon can still find the site useful by just following the font colors of their choice. Rest assured that when irreconcilable differences appear the TV series will alway trump any other source. </span>
-			</p>
+				</p><h2>SOURCES AND COLOR KEY</h2>
+				<span class="A-fanon">I've
+tried to base all my information off of reliable sources. These include
+the TV series (new and old), Novels, Audios, and numerous reference
+books and websites. Obviously I have a great deal of respect and love
+for the expanded universe of Doctor Who beyond just the TV episodes,
+but I've made sure to color code the text so that those with a narrower
+view of head-canon can still find the site useful by just following the
+font colors of their choice. Rest assured that when irreconcilable
+differences appear the TV series will alway trump any other source. </span>
+			
 			<p>
 				<span class="A-fanon">
-					<span style="font-weight: bold;">If you curious as to the source of any piece of data in this site just use your mouse to click on the text. This will reveal the color coding for sources. The Quick Color Key button in the top menu will show you the source of each color. </span>
+					<span style="font-weight: bold;">If
+you curious as to the source of any piece of data in this site just use
+your mouse to click on the text. This will reveal the color coding for
+sources. The Quick Color Key button in the top menu will show you the
+source of each color. </span>
 				</span>
 			</p>
 			<div class="innerlink">
@@ -1020,7 +1045,12 @@
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 			<h2>LAWYER'S QUIBBLES</h2>
 			<div class="section">
-				<span class="A-fanon">I have no intention of infringing on the BBC or anyone elses ideas, property, or the copyrights of any of the above franchises, I only wish to promote a more detailed understanding and appreciation of their universes. This web-page should be viewed as an advertisements for all the sources that went into making it. </span>
+				<span class="A-fanon">I
+have no intention of infringing on the BBC or anyone elses ideas,
+property, or the copyrights of any of the above franchises, I only wish
+to promote a more detailed understanding and appreciation of their
+universes. This web-page should be viewed as an advertisements for all
+the sources that went into making it. </span>
 			</div>
 		</div>
 	</div>
@@ -1045,9 +1075,7 @@
 		<p>Copyright 2018 AD</p>
 	</div>
 	<!-- Any text in these brackets is ignored and can be used for descriptive notes about how the program is written -->
-</body>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/rooscript.js" type="text/javascript"></script>
 
-</html>
+</body></html>
