--- a/rooappendix.html
+++ b/rooappendix.html
@@ -18,6 +18,9 @@
 			document.body.className += ' ' + 'mobile';
 		}
 	</script>
+	<div class="noshow">
+		<a href="index.html">Return To Master Index</a>
+	</div>
 	<div class="header">
 		<div id="logo">
 			<a href="index.html">
@@ -131,9 +134,6 @@
 				<li>
 					<a href="index.html#key">Sources</a>
 				</li>
-				<li>
-					<a href="#footer">Contact</a>
-				</li>
 				<div class="innerlink">
 					<div class="dropdown">
 						<li class="dropbtn">Quick Color Key</li>
@@ -161,6 +161,9 @@
 						</ul>
 					</div>
 				</div>
+				<li>
+					<a href="#footer">Contact</a>
+				</li>
 				<li>
 					<h3>click on paragraphs to see color coding for sources</h3>
 				</li>
@@ -1404,8 +1407,8 @@ inaugurated. </span>
 					<span class="A-tv">
 						<span class="A-audiobook">Karshtakavaar</span> (The Oncoming Storm)</span>
 				</li>
-				<li>
-					<span class="A-audiobook">Doctor Jon Smythe</span>
+				<li><span class="A-tv">The Destroyer of Skaro</span>
+					<span class="A-audiobook"></span></li><li><span class="A-audiobook">Doctor Jon Smythe</span>
 				</li>
 				<li>
 					<span class="A-audiobook">The Zonewalker</span>
@@ -1476,8 +1479,7 @@ inaugurated. </span>
 					<span class="A-audiobook">Dalek killer</span>
 				</li>
 				<li>
-					<span class="A-tv">The Warrior</span>
-				</li>
+					<span class="A-tv">The Warrior</span></li><li><span class="A-tv">The Doctor of War<br></span></li>
 				<li>
 					<span class="A-audiobook">The Great Scourge</span>
 				</li>
@@ -1530,8 +1532,7 @@ inaugurated. </span>
 					<span class="A-tv">The Soothsayer</span>
 				</li>
 				<li>
-					<span class="A-tv">Sweetie</span>
-				</li>
+					<span class="A-tv">Sweetie</span></li><li><span class="A-tv">The Imp of the Pandorica</span></li><li><span class="A-tv">The Beast of Trenzalore<br></span></li><li><span class="A-tv">The Shadow of the Valeyard</span></li><li><span class="A-tv">The Butcher of Skull Moon</span></li><li><span class="A-tv">The Last Tree of Garsennon<br></span></li>
 				<li>
 					<span class="A-tv">Merlin</span>
 				</li>
@@ -1626,8 +1627,8 @@ inaugurated. </span>
 				<li>
 					<span class="A-licensed">The Portrait of Rassilon</span>
 				</li>
-				<li>
-					<span class="A-audiobook">The Profane Virus of Rassilon</span>
+				<li><span class="A-tv">The <span class="A-audiobook">Presidential</span> Sash of Rassilon</span>
+					<span class="A-audiobook"></span></li><li><span class="A-audiobook">The Profane Virus of Rassilon</span>
 				</li>
 				<li>
 					<span class="A-tv">The Record of Rassilon (which includes the Directive of Rassilon)</span>
@@ -1645,9 +1646,7 @@ inaugurated. </span>
 				<li>
 					<span class="A-audiobook">The Runes of Rassilon</span>
 				</li>
-				<li>
-					<span class="A-tv">The Sash of Rassilon</span>
-				</li>
+				
 				<li>
 					<span class="A-licensed">The Scrolls of Rassilon</span>
 				</li>
@@ -1665,8 +1664,7 @@ inaugurated. </span>
 					<span class="A-tv">The Tomb of Rassilon (aka The Tower of Rassilon)</span>
 				</li>
 				<li>
-					<span class="A-audiobook">The Triumphs of Rassilon</span>
-				</li>
+					<span class="A-audiobook">The Triumphs of Rassilon</span></li><li><span class="A-audiobook">The Urn of Rassilon<br></span></li>
 			</ul>
 		</div>
 	</div>
