--- a/rootimeline4.html
+++ b/rootimeline4.html
@@ -17,6 +17,9 @@
 			document.body.className += ' ' + 'mobile';
 		}
 	</script>
+		<div class="noshow">
+			<a href="index.html">Return To Master Index</a>
+		</div>
 	<div class="header">
 		<div id="logo">
 			<a href="index.html">
@@ -130,9 +133,6 @@
 				<li>
 					<a href="index.html#key">Sources</a>
 				</li>
-				<li>
-					<a href="#footer">Contact</a>
-				</li>
 				<div class="innerlink">
 					<div class="dropdown">
 						<li class="dropbtn">Quick Color Key</li>
@@ -160,6 +160,9 @@
 						</ul>
 					</div>
 				</div>
+				<li>
+					<a href="#footer">Contact</a>
+				</li>
 				<li>
 					<h3>click on paragraphs to see color coding for sources</h3>
 				</li>
@@ -1159,11 +1162,10 @@ mother shows him the space ships flying overhead.</span>
 					Lung before haytime. </span>
 			</p>
 			<div id="azmael" style="padding-top: 160px; margin-top: -160px;">
-				<p>
-					</p><center>
-						<img src="images/hermit.jpeg">
-					</center>
-				
+				<center>
+					<img src="images/hermit3.jpg">
+					<img src="images/hermit.jpeg">
+				</center>
 			</div>
 			<p>
 				<span class="A-audiobook">? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (before his first day at the Prydon Academy
@@ -3371,9 +3373,17 @@ triggered it would cause the device to age to dust. </span>
 				<span class="A-fanon"></span>
 			</span>
 			<p class="A-audiobook">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; (before the War Lord Aliens were expelled / before Divided Loyalties)
-				<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The War Lord Aliens and the&nbsp;
+				<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The War Lord Aliens and the
 				<span class="A-audiobook">Gresaurus</span> are among the off-worlders who are allowed to attend the Academy.
-				<br>
+				Any
+alien coming to live on Gallifrey has to apply for Gallifreyan
+Residency.&nbsp; To be approved they must pass certain health and
+background checks as well as a test on knowledge of Gallifreyan
+culture.&nbsp; If the application is rejected, the alien’s memories of
+Time Lord interactions are forcibly blocked and then they are returned
+to their home time zone.&nbsp; The only legal way to avoid this is to
+marry a Gallifreyan, or serve as an ambassador for their
+homeworld.&nbsp; <br>
 				<span class="A-tv">
 					<span class="A-fanon">Given the name and their treatment by the Time Lords in War Games it is possible that the War Lord Aliens are also higher
 						evolutionaries like the Time Lords.&nbsp;</span>
@@ -5642,9 +5652,7 @@ Hole Drive technology throughout the Seven Systems. &nbsp;</span></span></p><p><
 				<span class="A-audiobook">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (after Divided Loyalties flashback
 					<span class="A-fanon">/ Probably when Morbius is deposed at it appears to have been his idea to let them on Gallifrey)</span>
 					<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Policy is changed so that </span>
-				<span class="A-tv">all aliens are forbidden to visit Gallifrey.&nbsp; </span>
-				<span class="A-audiobook">
-					<span class="A-notbbc">&nbsp;Some Time Lords would later claim that the visiting aliens were not allowed to leave Gallifrey and were executed
+				<span class="A-tv">all aliens are forbidden to visit Gallifrey.</span><span class="A-audiobook"><span class="A-notbbc">&nbsp;Some Time Lords would later claim that the visiting aliens were not allowed to leave Gallifrey and were executed
 						if they tried to leave or plan an invasion. &nbsp; &nbsp;</span>
 				</span>
 				<span class="A-tv">
