--- a/rootimeline5.html
+++ b/rootimeline5.html
@@ -17,6 +17,9 @@
 			document.body.className += ' ' + 'mobile';
 		}
 	</script>
+		<div class="noshow">
+			<a href="index.html">Return To Master Index</a>
+		</div>
 	<div class="header">
 		<div id="logo">
 			<a href="index.html">
@@ -130,9 +133,6 @@
 				<li>
 					<a href="index.html#key">Sources</a>
 				</li>
-				<li>
-					<a href="#footer">Contact</a>
-				</li>
 				<div class="innerlink">
 					<div class="dropdown">
 						<li class="dropbtn">Quick Color Key</li>
@@ -160,6 +160,9 @@
 						</ul>
 					</div>
 				</div>
+				<li>
+					<a href="#footer">Contact</a>
+				</li>
 				<li>
 					<h3>click on paragraphs to see color coding for sources</h3>
 				</li>
@@ -3728,17 +3731,7 @@ Probably before The Five Doctors&nbsp;) <br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbs
 				<span class="A-tv">Venusian Karate, Venusian Aikido,</span> Saturnian Kung-Fu, and training as a Ninja on Quinnis in Galaxy 4. &nbsp;</span>
 			<span class="A-audiobook">
 				<span class="A-tv">The Venusian lullabies the Doctor often sings</span> are actually very offensive and vulgar. </span>
-			<br>
-			<span class="A-audiobook">
-				<br> ?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (before World Game / probably
-				after the Doctor left Gallifrey /
-				<span class="A-game"> they are still experimental as of Genesis of the Dalaks)&nbsp; </span>
-				<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Time Lords start using Time Rings.&nbsp;
-				<span class="A-game">These locater and control devices work in conjunction with the Time Scoop of Rassilon and were invented by the Temporal
-					Development Center.&nbsp;
-					<span class="A-audiobook">The invention of Time Rings, combined with the popularity and reliability of hyper-message cubes, results in a decline
-						in the use of space-time telegraphs. &nbsp;</span>
-					<br>
+			<span class="A-audiobook"><span class="A-game"><span class="A-audiobook"></span><br>
 					<br>
 				</span>
 			</span>
@@ -11264,28 +11257,22 @@ learning that the Doctor destroyed the Sentillons.&nbsp; </span>
 						to rescue the Doctor in return for a new cycle of regenerations.&nbsp; The Doctor meets versions of his previous selves
 						who appear older then they should be.
 						<span class="A-audiobook">&nbsp;The Doctor later decides that they were ghosts,
-							<span class="A-fanon">but it was probably more likely that the shorting out of the time differential caused the ageing.</span>
-						</span>
-						&nbsp;</span>
-					<span class="A-tv">The Black Scrolls of Rassilon appear to be destroyed,
+							<span class="A-fanon">but it was probably more likely that the shorting out of the time differential caused the ageing.</span>&nbsp;</span></span><span class="A-tv">The Black Scrolls of Rassilon appear to be destroyed,
 						<span class="A-game">but Borusa almost certainly had made a copy of them. </span>&nbsp;The Castellan is</span>
-					<span class="A-tv"> killed. &nbsp;</span>
-					<span class="A-tv">Borusa is imprisoned by Rassilon.&nbsp;</span>
-					<span class="A-tv"> Rassilon releases the Master, stating that he will eventually suffer for his sins. </span>
-					<span class="A-tv">&nbsp;Despite having tried his best to save the Doctor, the Master is not given a new cycle of Regenerations.&nbsp;
+					<span class="A-tv"> killed.&nbsp;</span><span class="A-tv">Borusa is imprisoned by Rassilon.&nbsp;</span><span class="A-tv">Rassilon releases the Master, stating that he will eventually suffer for his sins. </span>
+					<span class="A-tv">Despite having tried his best to save the Doctor, the Master is not given a new cycle of Regenerations.&nbsp;
 					</span>
 					<span class="A-tv">
 						<span class="A-fanon">The Cybermen returned by Rassilon might carry knowledge of Gallifrey to the Cyber-Race.&nbsp;</span> The Doctor becomes
 						<span class="A-audiobook">the 409th</span>
-						President of Gallifrey.&nbsp;
-						<span class="A-licensed">This promotion might have been seen by the High Council, as an attempt to harness and domestic the Doctor. &nbsp;</span>
+						President of Gallifrey.
+						<span class="A-licensed">This promotion might have been seen by the High Council, as an attempt to harness and domestic the Doctor.</span>
 					</span>
 					<span class="A-tv">The Doctor goes on the run from the Time Lords again
 						<span class="A-audiobook">and now considers himself an exile.
 							<br> &nbsp;
 							<span class="A-tv">&nbsp;&nbsp; &nbsp;&nbsp; NOTE: It would appear that something in the Last Great Time War altered history so that
-								Sarah-Jane did not meet the Doctor in the Death Zone. &nbsp;
-								<span class="A-fanon">Or possibly Rassilon wiped her memory - but why? </span>
+								Sarah-Jane did not meet the Doctor in the Death Zone.&nbsp;<span class="A-fanon">Or possibly Rassilon wiped her memory - but why? </span>
 							</span>
 							<br>
 						</span>
@@ -11296,8 +11283,7 @@ learning that the Doctor destroyed the Sentillons.&nbsp; </span>
 					<span class="A-audiobook">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; </span>
 					<span class="A-audiobook">(right after The Five Doctors)
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Jelpax is demoted from Co-Ordinator of
-						the Matrix to Traffic Controller. &nbsp;</span>
-					<span class="A-audiobook">Engin probably replaces him.</span>
+						the Matrix to Traffic Controller.&nbsp;</span><span class="A-audiobook">Engin probably replaces him as Co-Ordinator.</span>
 				</p>
 				<p>
 					<span class="A-audiobook">
