--- a/rootimeline7.html
+++ b/rootimeline7.html
@@ -17,6 +17,9 @@
 			document.body.className += ' ' + 'mobile';
 		}
 	</script>
+		<div class="noshow">
+			<a href="index.html">Return To Master Index</a>
+		</div>
 	<div class="header">
 		<div id="logo">
 			<a href="index.html">
@@ -130,9 +133,6 @@
 				<li>
 					<a href="index.html#key">Sources</a>
 				</li>
-				<li>
-					<a href="#footer">Contact</a>
-				</li>
 				<div class="innerlink">
 					<div class="dropdown">
 						<li class="dropbtn">Quick Color Key</li>
@@ -161,6 +161,9 @@
 					</div>
 				</div>
 				<li>
+					<a href="#footer">Contact</a>
+				</li>
+				<li>
 					<h3>click on paragraphs to see color coding for sources</h3>
 				</li>
 			</ul>
@@ -183,10 +186,7 @@
 			<br>
 			<div class="quote">
 				<span class="A-notbbc">“What do we fear, after thirty years of War?
-					<br>
-We fear that it was lost in the first nanosecond. We fear that we are
-fighting something unstoppable and ancient. We fear that we may become
-what we fight, <br>or that we have already done so.” </span>
+					<br>We fear that it was lost in the first nanosecond. We fear that we are fighting something unstoppable and ancient. We fear that we may become what we fight, <br>or that we have already done so.” </span>
 			</div>
 			<div class="speaker">
 				<span class="A-notbbc"> - House Strategist Entarodora</span>
@@ -2622,20 +2622,9 @@ Project.&nbsp;&nbsp;&nbsp;&nbsp; </span>
 				or timeline. &nbsp;These </span>
 		</span>
 		<span class="A-notbbc">
-			<span class="A-game">stabilized quantum dimensional tunnels require tremendous resources to set up and maintain.</span>
+			<span class="A-game">stabilized quantum dimensional tunnels require tremendous resources to set up and maintain. </span>
 		</span>
-		<span class="A-notbbc">
-			<span class="A-game">&nbsp;</span>
-&nbsp;This area is considered out of bounds for the War in Heaven and
-both the Enemy and the Time Lords attempt to recapture him.&nbsp; House
-Mirraflex sends one of the Cwej to neutralize the 13 transport devices
-but he fails.&nbsp; With the help of Faction Paradox all the Universes
-where Rome never fell are "walled off" and become inaccessible (even to
-the Time Lords).&nbsp; Marcus Americanius Scriptor finishes collecting
-the devices (and related technology) from the worlds where Hitler won
-WWII and then leaves the alternate universe for the Classic
-Timeline.&nbsp; He writes his memoirs and titles them Warlords of
-Utopia.&nbsp; </span>
+		<span class="A-notbbc">This area is considered out of bounds for the War in Heaven and both the Enemy and the Time Lords attempt to recapture him.&nbsp; House Mirraflex sends one of the Cwej to neutralize the 13 transport devices but he fails.&nbsp; With the help of Faction Paradox all the Universes where Rome never fell are "walled off" and become inaccessible (even to the Time Lords).&nbsp; Marcus Americanius Scriptor finishes collecting the devices (and related technology) from the worlds where Hitler won WWII and then leaves the alternate universe for the Classic Timeline.&nbsp; He writes his memoirs and titles them Warlords of Utopia. </span>
 	</p>
 	<p>
 		<span class="A-notbbc">
@@ -2674,24 +2663,7 @@ Utopia.&nbsp; </span>
 		<span class="A-notbbc"> the Doctor’s TARDIS</span>
 		<span class="A-notbbc">) was unique because they were a hybrids. &nbsp;She is&nbsp;only half TARDIS on her Mother’s side. </span>
 		<span class="A-fanon">As part of the 101-Project </span>
-		<span class="A-notbbc">Lolita
-had the Master make special changes to her heart so that she can
-fulfill her destiny to evolve into a humanoid form.&nbsp;&nbsp;The
-changes were part of Mother (probably the Matrix)’s plan. &nbsp;Lolita</span>
-		<span class="A-notbbc"> is more of a process </span>
-		<span class="A-notbbc">then an actual life form. &nbsp;</span>
-		<span class="A-notbbc">She is a hostile new version of history with biomass and technology attached and, as such, its impossible for her to die.
-			&nbsp;Lolita</span>
-		<span class="A-notbbc"> takes the Time Lord prejudice against lesser species to an extreme and </span>
-		<span class="A-notbbc">sees herself as the smartest and most complex being in the Great Houses. &nbsp;She begins her career as an&nbsp;</span>
-		<span class="A-notbbc">Academician for Game Logic but will quickly rise through the ranks. &nbsp;Lolita is at least partially responsible for
-			getting the Time Lords into the Time War, and&nbsp;sees the War as useful for convincing the Time Lords that they are
-			physical beings and vulnerable.&nbsp; She really doesn’t care who the enemy is. &nbsp;Lolita is planning to reveal her
-			abilities to the Time Lords when circumstances are such that they can't stop her. It is at this point she plans to take
-			control and fulfill Mother’s plans to create a new form of history. &nbsp;</span>
-		<span class="A-notbbc">T</span>
-		<span class="A-notbbc">he War King sees Lolita as the future and doesn’t believe he has the power to stop Lolita – only to slow her down. &nbsp;</span>
-		<span class="A-notbbc">By this point Lolita is no longer linked with the Master.</span>
+		<span class="A-notbbc">Lolita had the Master make special changes to her heart so that she can fulfill her destiny to evolve into a humanoid form. The changes were part of Mother (probably the Matrix)’s plan. Lolita is more of a process then an actual life form. She is a hostile new version of history with biomass and technology attached and, as such, its impossible for her to die. &nbsp;Lolita takes the Time Lord prejudice against lesser species to an extreme and sees herself as the smartest and most complex being in the Great Houses. &nbsp;She begins her career as an Academician for Game Logic but will quickly rise through the ranks. &nbsp;Lolita is at least partially responsible for getting the Time Lords into the Time War, and sees the War as useful for convincing the Time Lords that they are physical beings and vulnerable.&nbsp; She really doesn’t care who the enemy is. &nbsp;Lolita is planning to reveal her abilities to the Time Lords when circumstances are such that they can't stop her. It is at this point she plans to take control and fulfill Mother’s plans to create a new form of history. The War King sees Lolita as the future and doesn’t believe he has the power to stop Lolita – only to slow her down. By this point Lolita is no longer linked with the Master.</span>
 	</p>
 	<p>
 		<span class="A-notbbc">1198 </span>
@@ -2764,22 +2736,8 @@ to escape the end of the Universe.&nbsp; They open a gate to another <span class
 		<span class="A-audiobook">
 			<br>
 		</span>
-		<span class="A-notbbc">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; Of the City of the
-Saved: Compassion's first son, Antipathy, begins destroying and
-re-creating parts of it.&nbsp; The parts he creates are undetectable by
-Compassion and thus capable of killing humans.&nbsp; Every human that
-dies is recreated by Antipathy.&nbsp; The Time Lord Handramit visits
-the City of the Saved but is eventually thrown out when it is learned
-that he is Councilor Alisheer St. Marx's Father.&nbsp; Antipathy begins
-raising an army of Manfolk to go to spread his pain and misery
-throughout the City.&nbsp; Godfather Avatar of the Faction Paradox's
-Rump Parliament destroys Antipathy with an Annihilation Bomb.&nbsp;
-Part of the City of the Saved undergoes a Civil War and the Universal
-Machine sends the last of the colonists to the Next Universe Colony,
-and the Downtime Gate is permanently sealed.&nbsp; The Next Universe
-Colony might be named Home, and it is predicted to last several
-quadrillennia.</span>
+		<span class="A-notbbc">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; 
+		Of the City of the Saved: Compassion's first son, Antipathy, begins destroying and re-creating parts of it.&nbsp; The parts he creates are undetectable by Compassion and thus capable of killing humans.&nbsp; Every human that dies is recreated by Antipathy.&nbsp; The Time Lord Handramit visits the City of the Saved but is eventually thrown out when it is learned that he is Councilor Alisheer St. Marx's Father.&nbsp; Antipathy begins raising an army of Manfolk to go to spread his pain and misery throughout the City.&nbsp; Godfather Avatar of the Faction Paradox's Rump Parliament destroys Antipathy with an Annihilation Bomb.&nbsp; Part of the City of the Saved undergoes a Civil War and the Universal Machine sends the last of the colonists to the Next Universe Colony, and the Downtime Gate is permanently sealed.&nbsp; The Next Universe Colony might be named Home, and it is predicted to last several quadrillennia.</span>
 	</p>
 	<p>
 		<span class="A-notbbc">1151-1201?
@@ -2809,20 +2767,9 @@ quadrillennia.</span>
 	<p>
 		<span class="A-notbbc">1201 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (50 years after the War begins /</span>
 		<span class="A-audiobook"> several centuries after Monster of Peladon / 3790 AD)
-			<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Interference: The Remote
-			encounters the Doctor (age ~737) on the planet Dust and infect him with a "virus" that will subvert him to the Faction
-			Paradox's will, by his eighth incarnation.&nbsp; I.M. Foreman will become Foreman's World.&nbsp; Father Kreiner is flung
-			into the Space-Time Vortex and trapped in I.M. Foreman's Bottle Universe.
-		</span>
-		<span class="A-notbbc">
-			<span class="A-fanon">
-				<span class="A-notbbc"></span>
-			</span>
-			<br>
-		</span>
+			<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Interference: The Remote encounters the Doctor (age ~737) on the planet Dust and infect him with a "virus" that will subvert him to the Faction Paradox's will, by his eighth incarnation. I.M. Foreman will become Foreman's World. Father Kreiner is flung into the Space-Time Vortex and trapped in I.M. Foreman's Bottle Universe. </span>
+		<br>
 	</p>
-	<span class="A-notbbc"></span>
-	<span class="A-notbbc"></span>
 	<p>
 		<span class="A-notbbc">?&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (After the War begins / after House Lolita is created)
 			<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The House of Tracolix becomes
@@ -2844,6 +2791,11 @@ quadrillennia.</span>
 	</p>
 </div>
 	<div class="box">
+		<p align="center">
+		<span class="A-TV">
+			<img src="images/timewarrior.jpg">
+			<br>Time Warrior</span>
+		</p>
 		<h2>The Face of the War - The Ninth Wave</h2>
 		<p>
 			&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
@@ -3562,11 +3514,16 @@ samples&nbsp;taken from Dalek mutants. &nbsp; <span class="A-fanon">In might hav
 			</span>
 		</span>
 	</p>
-
-
-	<span class="A-audiobook">?? &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; (during the early days of the Time War</span>
-	<span class="A-audiobook">
-	/ after the Daleks have been reveled as the enemy / </span>
+	<center>
+		<p>
+			<img src="images/bowship2.jpg">&nbsp;
+			<br>
+			<span class="A-licensed">The New Bow Ship design</span>
+		</p>
+	</center>
+	<span class="A-audiobook">?? &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+	(during the early days of the Time War </span>
+	<span class="A-audiobook">/ after the Daleks have been reveled as the enemy / </span>
 	<span class="A-licensed">a good while after the start of the Time War /</span>
 	<span class="A-game"> in the Time Lord's most desperate hour / probably right after The Enemies of Time)</span>
 	<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
@@ -3577,21 +3534,9 @@ samples&nbsp;taken from Dalek mutants. &nbsp; <span class="A-fanon">In might hav
 		<span class="A-tv">He wields the Gauntlet </span>of Rassilon. This weapon only available to the Lord President.
 		<span class="A-fanon">At lower settings </span>this ancient weapon disintegrates people with powerful electrical energy bolts. But </span>
 	<span class="A-audiobook">it is capable of functioning as a short range D-mat weapon. </span>
-
-
-	<span class="A-tv">
-		<span class="A-game">The Time Lords re-discover much of their lost science, and meet most of the requirements of being a level 11 society.
-			<span class="A-licensed">
-				&nbsp; Rassilon's Chancellor goes by the title The Second. &nbsp;Engin is the Coordinator of the Matrix at the end of the
-				Time War.&nbsp;</span>
-		</span>
-	</span>
-	<span class="A-tv">
-		<span class="A-game">
-			<span class="A-licensed">&nbsp;The Time War will eventually drive Rassilon insane. </span>
-		</span>
-	</span>
-	<span class="A-licensed"></span>
+	<span class="A-game">The Time Lords re-discover much of their lost science, and meet most of the requirements of being a level 11 society. </span>
+	<span class="A-licensed">Rassilon's Chancellor goes by the title The Second. Engin is the Coordinator of the Matrix at the end of the Time War. </span>
+	<span class="A-licensed">The Time War will eventually drive Rassilon insane. </span>
 	<p>
 		<span class="A-tv">
 			<span class="A-licensed">
