--- a/rootimeline8.html
+++ b/rootimeline8.html
@@ -17,6 +17,9 @@
 			document.body.className += ' ' + 'mobile';
 		}
 	</script>
+		<div class="noshow">
+			<a href="index.html">Return To Master Index</a>
+		</div>
 	<div class="header">
 		<div id="logo">
 			<a href="index.html">
@@ -130,9 +133,6 @@
 				<li>
 					<a href="index.html#key">Sources</a>
 				</li>
-				<li>
-					<a href="#footer">Contact</a>
-				</li>
 				<div class="innerlink">
 					<div class="dropdown">
 						<li class="dropbtn">Quick Color Key</li>
@@ -160,6 +160,9 @@
 						</ul>
 					</div>
 				</div>
+				<li>
+					<a href="#footer">Contact</a>
+				</li>
 				<li>
 					<h3>click on paragraphs to see color coding for sources</h3>
 				</li>
